[package]
name = "qwe"
version = "0.1.0"
authors = ["@danielbintar <daniel_bintar@yahoo.com>"]
edition = "2018"

[dependencies]
conrod_core = "0.62"
piston2d-graphics = "0.28"
pistoncore-input = "0.23.0"
piston_window = "0.85"
find_folder = "0.3.0"
conrod_piston = "0.62.0"
rand = "0.6.4"
reqwest = "0.9.8"
serde = "1.0"
serde_json = "1.0"
ws = "0.7.9"
piston2d-sprite = "0.47.0"
uuid = { version = "0.6", features = ["serde"] }
piston = "0.40.0"

serde_derive = "1.0"
